--- a/Grains/packages.config
+++ b/Grains/packages.config
@@ -4,4 +4,5 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net451" />
   <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net451" />
+  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net451" />
 </packages>
