Replace previous silo project with official OrleansHost.exe and fix redis provider

--- a/DemoRunner/DemoRunner.fsproj
+++ b/DemoRunner/DemoRunner.fsproj
@@ -57,6 +57,10 @@
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
+    <None Include="..\Silo\ClientConfiguration.xml">
+      <Link>ClientConfiguration.xml</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
