--- a/Host/App.config
+++ b/Host/App.config
@@ -32,6 +32,12 @@
             cluster {
               roles = [dispatcher]
               seed-nodes = ["akka.tcp://FireAnt@127.0.0.1:4053"]
+              singleton {
+                role = dispatcher
+              }
+              singleton-proxy {
+                role = dispatcher
+              }
             }
           }
       ]]>
