--- a/Lighthouse/App.config
+++ b/Lighthouse/App.config
@@ -37,7 +37,7 @@
             cluster {
               seed-nodes = ["akka.tcp://FireAnt@127.0.0.1:4053"]
               roles = [lighthouse]
-              auto-down-unreachable-after = 10s
+              # auto-down-unreachable-after = 10s
             }
           }
       ]]>
