--- a/Lighthouse/Lighthouse.csproj
+++ b/Lighthouse/Lighthouse.csproj
@@ -118,6 +118,12 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FireAnt\FireAnt.fsproj">
+      <Project>{0a5b2d20-308c-4599-9f99-c13f98173d9f}</Project>
+      <Name>FireAnt</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
