--- a/Client/App.config
+++ b/Client/App.config
@@ -44,6 +44,9 @@
             cluster {
               roles = [client]
               seed-nodes = ["akka.tcp://FireAnt@127.0.0.1:4053"]
+              singleton-proxy {
+                role = dispatcher
+              }
             }
           }
       ]]>
