--- a/Client/packages.config
+++ b/Client/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Akka" version="1.1.1" targetFramework="net451" />
   <package id="Akka.Cluster" version="1.1.1" targetFramework="net451" />
+  <package id="Akka.Cluster.Tools" version="1.1.1.28-beta" targetFramework="net451" />
   <package id="Akka.Remote" version="1.1.1" targetFramework="net451" />
   <package id="Akka.Serialization.Wire" version="1.1.1.28-beta" targetFramework="net451" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net451" />
