--- a/FireAnt/FireAnt.fsproj
+++ b/FireAnt/FireAnt.fsproj
@@ -55,6 +55,8 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="TaskQueue.fs" />
+    <Compile Include="Test.fs" />
     <Compile Include="Library.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
