--- a/Host/App.config
+++ b/Host/App.config
@@ -25,13 +25,13 @@
             }
             remote {
               helios.tcp {
-                hostname = "127.0.0.1"
+                hostname = "192.168.56.1"
                 port = 0
               }
             }
             cluster {
               roles = [dispatcher]
-              seed-nodes = ["akka.tcp://FireAnt@127.0.0.1:4053"]
+              seed-nodes = ["akka.tcp://FireAnt@192.168.56.1:4053"]
               singleton {
                 role = dispatcher
               }
@@ -39,6 +39,9 @@
                 role = dispatcher
               }
             }
+          }
+          workspace {
+            path = "D:\\Users\\vosen\\Documents\\Visual Studio 2015\\Projects\\XunitTestExample\\XunitTestExample\\bin\\Debug\\XunitTestExample.dll"
           }
       ]]>
     </hocon>
