Implement simple split strategy

--- a/Host/App.config
+++ b/Host/App.config
@@ -40,8 +40,9 @@
               }
             }
           }
-          workspace {
-            path = "D:\\Users\\vosen\\Documents\\Visual Studio 2015\\Projects\\XunitTestExample\\XunitTestExample\\bin\\Debug\\XunitTestExample.dll"
+          fireant {
+            workspace-path = "D:\\Users\\vosen\\Documents\\Visual Studio 2015\\Projects\\XunitTestExample\\XunitTestExample\\bin\\Debug\\XunitTestExample.dll"
+            test-times = "timing.txt"
           }
       ]]>
     </hocon>
