--- a/FireAnt/packages.config
+++ b/FireAnt/packages.config
@@ -3,12 +3,10 @@
   <package id="Akka" version="1.1.1" targetFramework="net451" />
   <package id="Akka.Cluster" version="1.1.1" targetFramework="net451" />
   <package id="Akka.Remote" version="1.1.1" targetFramework="net451" />
+  <package id="FSharp.Control.AsyncSeq" version="2.0.9" targetFramework="net451" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net451" />
-  <package id="Helios" version="2.1.2" targetFramework="net451" />
+  <package id="Helios" version="2.1.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="Reactive.Streams" version="1.0.0-RC1" targetFramework="net451" />
   <package id="System.Collections.Immutable" version="1.2.0" targetFramework="net451" />
-  <package id="xunit.abstractions" version="2.0.0" targetFramework="net451" />
-  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net451" />
-  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net451" />
 </packages>
